Introduce ValidationRule and ValidationIssue (#601)